tests/baselines/reference/project/intReferencingExtAndInt/node/intReferencingExtAndInt.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
internal2.ts(2,21): error TS1147: Import declarations in a namespace cannot reference a module.
internal2.ts(2,21): error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== internal2.ts (2 errors) ====
    namespace outer {
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    	                   ~~~~~~~~~~~
!!! error TS2792: Cannot find module 'external2'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    	export var a = g.square(5);
    	export var b = "foo";
    }